[gd_scene load_steps=4 format=3 uid="uid://swhiyoxhf6aw"]

[ext_resource type="Script" uid="uid://b76rrfn4iw8s8" path="res://scenes/puzzles/Flashlight.gd" id="1_tm6dd"]
[ext_resource type="Texture2D" uid="uid://v6scrfakrlck" path="res://resources/puzzleTextures/flashlight.png" id="2_tfrb2"]
[ext_resource type="Texture2D" uid="uid://cuy2y4obhihgv" path="res://resources/puzzleTextures/battery.png" id="3_0fhvd"]

[node name="Flashlight" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_tm6dd")

[node name="Flashlight" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 420.0
offset_right = 993.0
offset_bottom = 673.0
texture = ExtResource("2_tfrb2")
flip_h = true

[node name="Battery1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1340.0
offset_top = 400.0
offset_right = 1625.0
offset_bottom = 685.0
rotation = 1.5707964
texture_normal = ExtResource("3_0fhvd")

[node name="Battery2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1720.0
offset_top = 400.0
offset_right = 2005.0
offset_bottom = 685.0
rotation = 1.5707964
texture_normal = ExtResource("3_0fhvd")

[connection signal="button_down" from="Battery1" to="." method="GrabBattery1"]
[connection signal="pressed" from="Battery1" to="." method="FlipBattery1"]
[connection signal="button_down" from="Battery2" to="." method="GrabBattery2"]
[connection signal="pressed" from="Battery2" to="." method="FlipBattery2"]
